# mlb-kalshi-edge

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  requirements.txt  tsconfig.json  vercel.json
.github/workflows/: daily-mlb-edge.yml
app/: layout.tsx  page.tsx  styles.css
app/api/backtest/: route.ts
app/api/cron/daily/: route.ts
app/api/dashboard/: route.ts
app/api/health/: route.ts
app/api/predictions/: route.ts
app/components/: Charts.tsx  MetricCard.tsx  TodaysBoard.tsx  TopBets.tsx
app/lib/: dashboard.ts  env.ts  format.ts  supabase.ts  types.ts
database/: schema.sql
docs/: ARCHITECTURE.md  ROADMAP.md
python/mlb_kalshi/: __init__.py
python/mlb_kalshi/betting/: bankroll.py  edge_engine.py
python/mlb_kalshi/config/: settings.py
python/mlb_kalshi/data/: kalshi_client.py  metrics.py  mlb_client.py  schemas.py
python/mlb_kalshi/db/: repository.py
python/mlb_kalshi/features/: builder.py
python/mlb_kalshi/models/: training.py
python/mlb_kalshi/pipeline/: daily.py
python/mlb_kalshi/reporting/: emailer.py  report.py
python/mlb_kalshi/utils/: logging.py
scripts/: run_daily.py  train_model.py
tests/: test_bankroll.py  test_edge_engine.py  test_repository.py
